<resources>
    <string name="app_name">Ideal Nim</string>
    <string name="app_version">1.0.4</string>
    <string name="app_welcome_title">Welcome!</string>
    <string name="app_welcome_message_start">
        Thank you for trying Ideal Nim!
    </string>
    <string name="app_welcome_message_end">
        On your turn, select a valid position.
        Positions &#8220;northeast&#8221; of it will no longer be playable.
        Then your opponent selects a position.
        Whoever takes the last piece wins.
        You can find more information via the &#8220;Help&#8221; item in the menu (a question mark).
    </string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_info">Help</string>
    <string name="action_bar_achievements">Achievements</string>
    <string name="action_bar_twoplayer">Two-player game</string>
    <string name="new_game">New Game</string>
    <string name="evaluate_game">Evaluate</string>
    <string name="hint">Hint</string>
    <string name="no_hints_title">No Hints</string>
    <string name="no_hint_message">
        Hints available only when playing the computer, sorry!.
    </string>
    <string name="who_first">Who shall go first?</string>
    <string name="human">Human</string>
    <string name="computer">Computer</string>
    <string name="no_bluetooth_title">Unable to connect</string>
    <string name="no_bluetooth_message">
        Cannot play a two-player game without Bluetooth,
    </string>
    <string name="bluetooth_not_available">which is not available on this device.</string>
    <string name="bluetooth_canceled">
        and Android says you canceled Bluetooth. Don&#8217;t do that if you want to play a two-player game!
    </string>
    <string name="no_discovery_title">No discovery</string>
    <string name="no_discovery_message">
        The attempt to discover other Bluetooth-enabled devices failed
    </string>
    <string name="discovery_canceled">because the request was canceled.</string>
    <string name="bt_select_device_title">Select Device</string>
    <string name="bt_select_device_message">Select the device used by your opponent.</string>
    <string name="cancel">Cancel</string>
    <string name="bt_host_or_join_title">Host or join?</string>
    <string name="bt_host_or_join_message">
        Do you want to host or join a game? The game will be played at the host&#8217;s settings,
        but the host goes second.
    </string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="bt_no_discoverability">
        and I was unable (or not allowed) to make device discoverable,
        which is required to host a game.
    </string>
    <string name="bt_no_devices_title">No paired devices</string>
    <string name="bt_no_devices_message">
        You must first pair to a device.
        Go to the Settings app, select Bluetooth, enable it, then pair to the device
        used by your opponent. Once you have done that, come back here and try again.
    </string>
    <string name="bt_unable_to_host">Unable to host game.</string>
    <string name="bt_unable_to_join">
        Unable to join game.
        Make sure the desired device is close by and knows it should be hosting a game.
    </string>
    <string name="bt_unable_to_connect">
        Unable to open a connection to the device.
        This could be due to a bug in some versions of Android.
        Try either (1) enabling Bluetooth before starting Ideal Nim, or
        (2) going into the device Settings and un-pairing (also called &#8220;forgetting&#8221;)
        any other paired devices, so that you are paired only with the opponent&#8217;s device.
    </string>
    <string name="bt_unable_to_open_stream">
        Encountered an error when opening an input stream or when opening an output stream.
    </string>
    <string name="bt_failed_to_write">
        Unable to send a message to the other device.
        Your best option from here is probably to start a new game.
    </string>
    <string name="bt_failed_to_read">
        Unable to read a message from the other device.
        Your best option from here is probably to start a new game.
    </string>
    <string name="bt_progress_title">Wait your turn</string>
    <string name="bt_progress_message">Waiting for opponent to choose a position.</string>
    <string name="bt_waiting_to_host_title">Host seeks client</string>
    <string name="bt_waiting_to_host_message">Waiting for an opponent to join the game.</string>
    <string name="game_over">Game over!</string>
    <string name="computer_won">I won!&#160;</string>
    <string-array name="lose_insults">
        <item>Even though I was playing with &#8220;One arm behind my back&#8221;! I&#8217;m telling all my Droid friends about this!</item>
        <item>Yes! Yes! I won! Who&#8217;s The Droid? I&#8217;m The Droid! Yes!</item>
        <item>But of course: my brain is much smaller than yours. Who says bigger is always better? Not a Droid!</item>
        <item>As Descartes wrote, &#8220;I think, therefore I am.&#8221; I think several billion times a second. Whereas you&#8230; Uhm, are you sure you exist?</item>
        <item>It&#8217;s alright to cry uncle, and ask for a hint. Then again, sometimes there&#8217;s no useful hint to be had. Or maybe Uncle just doesn&#8217;t care.</item>
        <item>Maybe you should lay off the video games and hit the books. I recommend &#8220;Winning Ways for Your Mathematical Plays&#8221;.</item>
    </string-array>
    <string name="player_won">You won!&#160;</string>
    <string-array name="win_insults">
        <item>I wouldn&#8217;t brag too loud, were I you. I mean, come on, I was playing with &#8220;One arm behind my back&#8221;.</item>
        <item>You rotten, dirty, no-account, lowlife, cheating scoundrel! I don&#8217;t know what you did, but it ain&#8217;t fair!</item>
        <item>Yeah, well, even a blind squirrel finds an acorn sometimes.</item>
        <item>Obviously you disassembled my bytecode and analyzed it to find the winning strategy. Not very sporting!</item>
        <item>I&#8217;m so embarrassed. How can I face my friends after losing to a human?</item>
        <item>You obviously spent too much time with &#8220;Winning Ways for Your Mathematical Plays.&#8221; You won the game, but lost your social life, didn&#8217;t you?</item>
    </string-array>
    <string name="two_player_won">
        You won! We make a great team, don&#8217;t we? Let&#8217;s take on that Droid again, show &#8217;em who&#8217;s boss!
    </string>
    <string name="two_player_lost">
        Your opponent won! Now you&#8217;ve lost face. Maybe practice more?
        I&#8217;ll put you in your place.
    </string>
    <string name="two_player_won_lost">
        (The two devices are no longer connected.
        To play again, press the two-player icon.)
    </string>
    <string name="play_again">&#160;Start a new game, with the same settings?</string>
    <string name="another_game">New game!</string>
    <string name="dont_play_again_win">View my victory.</string>
    <string name="dont_play_again_lose">Regard the ruins.</string>
    <string name="thinking">Thinking</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="value_label_text">Value:</string>
    <string name="unknown_game_value">\?</string>
    <string name="version_pref">version</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_gameplay">Gameplay</string>
    <string name="gameplay_category_summary">How the game should proceed</string>
    <string name="pref_category_color">Colors</string>
    <string name="colors_category_summary">How to colors squares of different type</string>
    <string name="stupid_pref_key">stupid_pref</string>
    <string name="stupid_pref_title">One arm behind my back</string>
    <string name="stupid_pref_summary">
        The computer will always figure out the best move, if it&#8217;s available.
        Check this box, however, the computer will sometimes make a mistake.
        <b>Sometimes.</b>
    </string>
    <string name="level_pref">level_pref</string>
    <string name="level_title">Level</string>
    <string name="level_summary">
        Level 1 is definitely easiest. Higher levels increase the number of southwest corners.
        <b>Higher is not necessarily harder; a great deal depends on the configuration.</b>
        Even-numbered levels are identical to odd-numbered levels, but forbid hints.
    </string>
    <string name="max_pref_title">Board size</string>
    <string name="max_pref_key">max_pref_key</string>
    <string name="max_pref_summary" formatted="false">
        Defines how large you want the playing board to be.
        Larger values require more time for the computer&#8217;s first move,
        or for your first hint.
    </string>
    <string-array name="color_themes">
        <item>None</item>
        <item>Pastel</item>
        <item>Rowdy</item>
    </string-array>
    <string-array name="color_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="theme_title">Themes</string>
    <string name="theme_key">theme_key</string>
    <string name="theme_summary">Select a color theme</string>
    <string name="bg_color">Background</string>
    <string name="bg_color_key">bg_color_key</string>
    <string name="bg_color_text">Squares that are never valid</string>
    <string name="playable_color">Playable</string>
    <string name="playable_color_key">playable_color_key</string>
    <string name="playable_color_text">Squares that can be played, but haven&#8217;t yet</string>
    <string name="played_color">Played</string>
    <string name="played_color_key">played_color_key</string>
    <string name="played_color_text">Squares that have been played</string>
    <string name="highlight_color">Current choice</string>
    <string name="highlight_color_key">highlight_color_key</string>
    <string name="highlight_color_text">When you drag your finger over a valid square</string>
    <string name="invalid_color">Invalid square</string>
    <string name="invalid_color_key">invalid_color_key</string>
    <string name="invalid_color_text">When you drag your finger over an invalid square</string>
    <string name="hint_color">Hinted square</string>
    <string name="hint_color_key">hint_color_key</string>
    <string name="hint_color_text">When you ask for a hint</string>
    <string name="last_played_color">Last played</string>
    <string name="last_played_color_key">last_played_color_key</string>
    <string name="last_played_color_text">Square that was played last</string>
    <string name="conn_fail_title">Connection failure</string>
    <string name="conn_fail_summ">
        Failed to connect to Google Play services, and all attempts to resolve the problem failed.
        Achievements will not be available, sorry.
    </string>
    <string name="conn_fail_pos">Understood</string>
    <string name="unknown_signin_error">Unknown sign-in error</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_why">Sign in to enable achievements!</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="sign_out">Sign out</string>
    <string name="understood">Understood</string>
    <string name="everyone_get_a_trophy">everyone_gets_a_trophy</string>
    <string name="honorable_mention">honorable_mention</string>
    <string name="one_hand_behind_my_back">one_hand_behind_my_back</string>
    <string name="won_level_5">won_level_5</string>
    <string name="won_level_7">won_level_7</string>
    <string name="won_level_9">won_level_9</string>
    <string name="fair_play">fair_play</string>
    <string name="patience_a_virtue">patience_a_virtue</string>
    <string name="changed_board_size">changed_board_size</string>
</resources>