<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="name.cantanima.idealnim.MainActivity">
    <item
        android:id="@+id/action_achievements"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="100"
        android:title="@string/action_bar_achievements"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="101"
        android:title="@string/action_bar_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_information"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="300"
        android:title="@string/action_bar_info"
        app:showAsAction="always"/>
</menu>
